--- a/src/toDoApp.css
+++ b/src/toDoApp.css
@@ -34,17 +34,23 @@ align-items: center;
    
 }
 #welcome{
-    background: #D3959B;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #BFE6BA, #D3959B);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #BFE6BA, #D3959B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   
 
+}
+#theRow{
+  
 }
 #howTo{
     
 
 }
+#app{
+    height: 80vh;
+    overflow-y: scroll;
+    
+}
 #bulb{
-    color:  blue ;
+    color: #555654;
   
     
 
