--- a/src/toDoApp.css
+++ b/src/toDoApp.css
@@ -36,6 +36,11 @@
     font-size: 15px;
    
 }
+#backToIns{
+    font-size: 12px;
+ 
+    
+}
 #welcome{
    
 
@@ -81,6 +86,10 @@
 #newTask{
     font-size: 14px;
 
+}
+#backToIns{
+    font-size: 8px;
+    width: 25%;
 }
 
 }
